# dashboard-rework-2

./: Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: client.rs  getters.rs  main.rs  terminal.rs
crates/config/: Cargo.toml
crates/config/src/: backend.rs  frontend.rs  lib.rs
crates/config/templates/: config-backend.template.toml  config-frontend.template.toml
crates/proto/: Cargo.toml
crates/proto/src/: backend.rs  frontend.rs  lib.rs  types.rs
crates/server/: Cargo.toml
crates/server/assets/css/: global.css  main.css  process.css  system.css
crates/server/assets/js/: components.js  ext-fixi.js  fixi-0.6.5.js
crates/server/src/: backend.rs  main.rs
crates/server/src/backend/: cache.rs  conn.rs  mod.rs
crates/server/src/http/: mod.rs  request.rs  response.rs  router.rs  statics.rs
crates/server/src/pages/: login.rs  management.rs  misc.rs  mod.rs  process.rs  software.rs  system.rs  template.rs  terminal.rs
crates/server/src/pages/system/: fragments.rs  graph.rs  mod.rs
crates/server/static/: ext-fixi.js  fixi-0.6.3.js  fixi-0.6.4.min.js  main.css
scripts/: build-assets.bash  build-release.bash  clean-css.bash  run-dev.bash
